@@ -47,6 +47,9 @@ Bindings:
 * .net
 * java
 
+20121026
+* bug fix in new pylnk functions
+
 20121025
 * libfwsi update, fixed issues with debug output
 
